fixed container overlap issues when zooming in/out or when browser window was too large or small

--- a/client/src/styling/CalendarDay.css
+++ b/client/src/styling/CalendarDay.css
@@ -50,10 +50,21 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    top: 70px;
+    top: 60px;
+    left: 5px;
+    right: 5px;
+    padding: 2% 28%;
+    }
+
+.calendar-body-container {
+    padding: 0 5%;
+    max-height: calc(100vh - 100px);
+    position: fixed;
+    top: 160px;
     left: 0;
     right: 0;
-    padding: 2% 28%;
+    padding-bottom: 100px;
+    /* border: 2px red solid; */
 }
 
 .calendar-header-switcher {
@@ -107,18 +118,7 @@
     background-color: white;
     padding: 10px;
     z-index: 10;
-}
-
-
-.calendar-body-container {
-    padding: 0 5%;
-    overflow-y: auto;
-    max-height: calc(100vh - 100px);
-    position: fixed;
-    top: 160px;
-    left: 0;
-    right: 0;
-    padding-bottom: 100px;
+    /* border: 2px orange solid; */
 }
 
 .scrollable-calendar-weeks {
@@ -128,4 +128,5 @@
     -webkit-mask-image: linear-gradient(to bottom, transparent, black 3%, black 97% transparent 100%);
     padding-top: 2%;
     padding-bottom: 1%;
+    /* border: 2px solid purple; */
 }
